base/src/test/resources/failure/syntax/issue350-qualified-id.aya.txt
In file $FILE:1:18 ->

  1 | def x : Type => \ A::B => x
                        ^--^

Error: Parser error: parameter name `A::B` should not be qualified

Parsing interrupted due to:
1 error(s), 0 warning(s).
What are you doing?
